--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -3,24 +3,115 @@ html{
     width: 100%;
     height: 100%;
     box-sizing: border-box;
+    font-size: 1rem;
 }
 body{
     margin: 0;
 }
+button{
+    background-color: #f84646;
+    color: white;
+    font-weight: 500;
+    font-size: 24px; 
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    border:none;
+    cursor: pointer;
+}
 h1{
-    font-size: 64px;
+    font-size: 4rem;
     font-weight: 800;
 }
+h2{ 
+    font-size: 3rem;
+    font-weight: 800;
+    margin: 0;
+}
+
 #presentation-container{
-    border: 1px solid black;
-    padding: 40px 120px;
-    height: 600px;
-
-
+    padding: 2.5rem 7.5rem;
+    height: 100vh;
+    background-image: url(./assets/Rectangle\ 1.png);
+    background-repeat: no-repeat;
+    background-size:cover;
+    display:flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 #presentation {
-    width: 600px;
-    position: relative;
-    top: calc(50% - 145px);
+    width: 37.5rem;
+}
+#qualities{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4rem;
+} 
+#qualities > div{
+    margin: 0 2.5rem;
+}
 
+
+.container{ 
+    padding: 5rem 7.5rem;
+    text-align: center;
+}
+.contact-title{
+    margin-top: 0.5rem;
+}
+.container > p {
+    margin-top: 1.5rem;
+}
+.container > button {
+    margin-top: 2rem;
+}
+.background-gradient{
+    background: linear-gradient(180deg, #fff, #d9d9d9);
+}
+.background-red{
+    background-color: #f84646;
+    color: white;
+}
+.article-container{
+    display: flex;
+    flex-direction: row;
+}
+.article-container:nth-child(even){
+    margin-top: 5rem;
+    flex-direction: row-reverse;
+}
+.article-details{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: flex-start;
+    margin: 0 2.5rem 0 0;
+    justify-content: space-between;
+}
+.article-details > button {
+    font-size: 1rem;
+}
+.article-container:nth-child(even) > .article-details{
+    margin: 0 0 0 2.5rem;
+}
+.footer-list{
+    display: flex;
+    text-align: left;
+}
+.footer-list > ul > li{
+    list-style: none;
+    margin-bottom: 1rem;
+}
+.footer-list > ul > li:last-child{
+    margin-bottom: 0;
+}
+.footer-list > ul > li:first-child{
+    margin-bottom: 1.5rem;
+    font-weight: 700;
+}
+.footer-copyright{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 8.5rem;
 }
