--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -23,7 +23,7 @@ h1{
     font-weight: 800;
 }
 h2{ 
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 800;
     margin: 0;
 }
@@ -72,9 +72,16 @@ h2{
     background-color: #f84646;
     color: white;
 }
+.background-grey{
+    background-color: #f4f5f7;
+}
 .article-container{
     display: flex;
     flex-direction: row;
+}
+.article-container > img{
+    width: 50%;
+
 }
 .article-container:nth-child(even){
     margin-top: 5rem;
@@ -114,4 +121,223 @@ h2{
     justify-content: space-between;
     align-items: center;
     margin-top: 8.5rem;
+}
+.grid-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5rem;
+}
+.grid-item > h3{
+    margin-top: .5rem;
+}
+.grid-item > p{
+    margin-top: .5rem 0 0;
+}
+.grid-container-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 1.5rem;
+    margin-top: 3rem;
+}
+.grid-item-companies{
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 1rem;
+}
+.company-1{
+    grid-area: 3 / 1;
+}
+
+.company-2{
+    grid-area: 2 / 2;
+}
+
+.company-3{
+    grid-area: 3 / 2;
+}
+.company-4{
+    grid-area: 1 / 3;
+}
+
+.company-5{
+    grid-area: 2 / 3;
+}
+
+.company-6{
+    grid-area: 3 / 3;
+}
+.company-7{
+    grid-area: 2 / 4;
+}
+
+.company-8{
+    grid-area: 3 / 4;
+}
+
+.company-9{
+    grid-area: 3 / 5;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    h1 {
+        font-size: 3.5rem;
+    }
+    h2 {
+        font-size: 1.5rem;
+    }
+    #presentation-container{
+        padding: 5rem 4rem;
+    }
+    .container{
+        padding: 5rem 4rem;
+    }
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .article-container > img{
+        width: 50%;
+        object-fit: cover;
+    }
+    .grid-container-companies{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto;
+        gap: 1.5rem;
+        margin-top: 3rem;
+
+    }
+    .company-1 {
+        grid-area: auto;
+    }
+    .company-2 {
+        grid-area: auto;
+    }
+    .company-3 {
+        grid-area: auto;
+    }
+    .company-4 {
+        grid-area: auto;
+    }
+    .company-5 {
+        grid-area: auto;
+    }
+    .company-6 {
+        grid-area: auto;
+    }
+    .company-7 {
+        grid-area: auto;
+    }
+    .company-8 {
+        grid-area: auto;
+    }
+    .company-9 {
+        grid-area: auto;
+    }
+
+}
+
+@media only screen and (max-width: 768px) {
+    h1 {
+        font-size: 2.5rem;
+    }
+    h2 {
+        font-size: 2rem;
+    }
+    #presentation-container{
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    .grid-container {
+        grid-template-columns: 1fr;
+    }
+    #qualities{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 4rem;
+    }
+    #qualities > img{
+        transform: rotate(90deg); 
+        margin: 2.5rem 0;   
+    }
+    .article-container{
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    .article-container:nth-child(even){
+        flex-direction: column-reverse;
+    }
+    .article-details{
+        text-align: center;
+        align-items: normal;
+        margin: 2rem 0 0 0 ;
+    }
+    .article-container:nth-child(even) > .article-details{
+        margin: 2rem 0 0 0 ;
+    }
+    .article-container > img{
+        width: 100%;
+    }
+    .grid-container-companies{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        gap: 1.5rem;
+        margin-top: 3rem;
+        
+    }
+    .grid-item-companies{
+        height: 6rem;
+
+    }
+    .company-1 {
+        grid-area: auto;
+    }
+    .company-2 {
+        grid-area: auto;
+    }
+    .company-3 {
+        grid-area: auto;
+    }
+    .company-4 {
+        grid-area: auto;
+    }
+    .company-5 {
+        grid-area: auto;
+    }
+    .company-6 {
+        grid-area: auto;
+    }
+    .company-7 {
+        grid-area: auto;
+    }
+    .company-8 {
+        grid-area: auto;
+    }
+    .company-9 {
+        grid-area: auto;
+    }
+    .footer-list{
+        justify-content: center;
+        flex-direction: column;
+    }
+    .footer-list > ul{
+        margin-top: 3rem;
+    }
+    .footer-list > ul:first-child{
+        margin-top: 0rem;
+    }
+    .footer-copyright{
+        flex-direction: column-reverse;
+    }
+    .footer-copyright > div:first-child{
+        margin-top: 4rem;
+    }
+
+
 }
